--- a/C note/零散笔记.md
+++ b/C note/零散笔记.md
@@ -1,2 +1,4 @@
-**getchar()** ä¼šå°†è¾“å…¥ç¼“å†²ä¸­çš„ç©ºæ ¼å’Œæ¢è¡Œï¼ˆå°±æ˜¯æ‰€æœ‰å­—ç¬¦ï¼‰éƒ½è¯»åˆ°ç¨‹åºä¸­ã€‚
-**scanf("%s",str)**åœ¨è¯»å…¥åˆ°ç©ºæ ¼æ—¶å°±åœæ­¢è¯»å…¥
+**getchar()** »á½«ÊäÈë»º³åÖÐµÄ×Ö·û£¨ËùÓÐÖÖÀà×Ö·û£¬°üÀ¨¿Õ¸ñºÍ»»ÐÐ£©¶ÁÒ»¸öµ½³ÌÐòÖÐ¡£  
+**scanf("%s",str)**ÔÚ¶ÁÈëµ½¿Õ¸ñÊ±¾ÍÍ£Ö¹¶ÁÈë  
+**malloc()**looping without free() every time does no harm to any modern operating system.    
+¶¨ÒåÒ»¸ö**×Ö·ûÐÍÖ¸Õë**ÓÃÀ´´æ´¢×Ö·û´®Ïàµ±ÓÚ¿ª±ÙÎÞÃû×Ö·ûÊý×é£¬È»ºóÓÃÖ¸ÕëÖ¸ÏòÆäÊ×µØÖ·¡£ÊäÈë²Ù×÷»áÊ¹¸ÃÖ¸ÕëÒÆÏò¸ÃÊý×éµÄÄ©Î²£¬¿ÉÒÔÓÃstr-=strlen(str)-1À´½«ÆäÒÆÏòÍ·²¿  
