--- a/C note/文件相关操作.md
+++ b/C note/文件相关操作.md
@@ -1,5 +1,5 @@
-# æ–‡ä»¶
-C/C++éƒ½å¯ä»¥ç”¨ä¸€ä¸ªå‡½æ•°å°†è¾“å…¥è¾“å‡ºé‡å®šå‘è‡³æ–‡ä»¶:freopen();è¯¥å‡½æ•°æœ‰ä¸‰ä¸ªå‚æ•°ï¼Œç¬¬ä¸€ä¸ªæ˜¯æ–‡ä»¶åç§°ï¼Œå¦‚æœè¯¥åç§°æ–‡ä»¶åœ¨å½“å‰ç›®å½•ä¸å­˜åœ¨çš„è¯åˆ™ä¼šåˆ›å»ºä¸€ä¸ªæ–°çš„ã€‚ç¬¬äºŒä¸ªå‚æ•°æ˜¯å¦‚ä½•å¯¹æ–‡ä»¶è¿›è¡Œè®¿é—®çš„ä¸€ä¸ªç¬¦å·ã€‚ç¬¬ä¸‰ä¸ªæ˜¯éœ€è¦è¢«é‡å®šå‘çš„æµã€‚å¸¸è§„åšæ³•å¦‚ä¸‹
+# ÎÄ¼ş
+C/C++¶¼¿ÉÒÔÓÃÒ»¸öº¯Êı½«ÊäÈëÊä³öÖØ¶¨ÏòÖÁÎÄ¼ş:freopen();¸Ãº¯ÊıÓĞÈı¸ö²ÎÊı£¬µÚÒ»¸öÊÇÎÄ¼şÃû³Æ£¬Èç¹û¸ÃÃû³ÆÎÄ¼şÔÚµ±Ç°Ä¿Â¼²»´æÔÚµÄ»°Ôò»á´´½¨Ò»¸öĞÂµÄ¡£µÚ¶ş¸ö²ÎÊıÊÇÈçºÎ¶ÔÎÄ¼ş½øĞĞ·ÃÎÊµÄÒ»¸ö·ûºÅ¡£µÚÈı¸öÊÇĞèÒª±»ÖØ¶¨ÏòµÄÁ÷¡£³£¹æ×ö·¨ÈçÏÂ
 ```cpp
 freopen("general.in","r",stdin);
 freopen("general.out","w",stdout);
@@ -12,3 +12,8 @@ freopen("general.out","w",stdout);
 | "r+"|**read/update**: Open a file for update (both for input and output). The file must exist.| 
 
 *What does the "update" mean? You insert from the begining of the file. For example, if the original content of the file is "Didyouchange?", and you "r+" and cout<<"lhx". After the operation, the file will be "lhxyouchange?".*
+
+ÎÄ¼ş²Ù×÷Ïà¹Øº¯Êı  
+feof(FILE)  ¸Ãº¯ÊıÅĞ¶Ï¶ÔÓ¦ÎÄ¼şÖ¸ÕëÖĞµÄÎ»ÖÃ±êÊ¶ÊÇ·ñÒÑ¾­µ½ÁËEOF¼´ÎÄ¼şµÄ½áÎ²´¦¡£Èç¹ûÒÑ¾­µ½º¯ÊıµÄ½áÎ²Ôò·µ»Ø1·ñÔò·µ»Ø0
+fprintf(FILE,"",)  
+fscanf(FILE,"",)
