--- a/C note/总结.md
+++ b/C note/总结.md
@@ -18,4 +18,6 @@
 *一个冲突在于，不能在做别的事情的时候思考这些知识。其实不仅仅是程设这方面，还有社会与哲学知识也是一样的*
 
 **对于编程语言和底层的理解很重要，但不能将它们解读成编程能力**  
-编程能力更多的指用程序设计语言去实践的能力，而底层逻辑的学习不等于这个
+编程能力更多的指用程序设计语言去实践的能力，而底层逻辑的学习不等于这个  
+
+*无感之为不为*
