--- a/C note/console_graph/显示缓冲.md
+++ b/C note/console_graph/显示缓冲.md
@@ -1,5 +1,5 @@
-# æ˜¾ç¤ºç¼“å†²
+# ÏÔÊ¾»º³å
 A screen buffer is **a two-demensional array of character and color data** for output in a console window. A console can have multiple screen buffers. The active screen buffer is the one that is displayed on the screen.  
-*åœ¨æ§åˆ¶å°ä¸­åˆ¶ä½œç•Œé¢å¿…é¡»äº†è§£çš„ä¸œè¥¿*  
+*ÔÚ¿ØÖÆÌ¨ÖĞÖÆ×÷½çÃæ±ØĞëÁË½âµÄ¶«Î÷*  
 The system creates a screen buffer whenever it creates a new console. To open a handle to a console's active screen buffer, specify the CONOUT\$ value in a call to the CreateFile function.   
-*ä¸€ä¸ªçª—å£åˆ›å»ºæ—¶å°±ä¼šåˆ›å»ºä¸€ä¸ªæ˜¾ç¤ºç¼“å†²ã€‚ä¸€ä¸ªçª—å£å…è®¸æ‹¥æœ‰å¤šä¸ªæ˜¾ç¤ºç¼“å†²ï¼Œä½†æ˜¯active screen bufferæ‰æ˜¯ç”¨æ¥æ˜¾ç¤ºåœ¨å±å¹•ä¸Šçš„*
+*Ò»¸ö´°¿Ú´´½¨Ê±¾Í»á´´½¨Ò»¸öÏÔÊ¾»º³å¡£Ò»¸ö´°¿ÚÔÊĞíÓµÓĞ¶à¸öÏÔÊ¾»º³å£¬µ«ÊÇactive screen buffer²ÅÊÇÓÃÀ´ÏÔÊ¾ÔÚÆÁÄ»ÉÏµÄ* 
