--- a/C note/工程.md
+++ b/C note/工程.md
@@ -1,6 +1,8 @@
 # 工程
+**最重要的是编写程序的核心是满足需求，在满足需求的前提下去满足艺术设计**
+
 头文件中对工程中定义的函数进行声明，然后在工程中需要使用的地方使用，并引入所有源文件所需要的标准库。在头文件中要加入防止重复引入的预处理命令。同时注意普通函数，变量和加const限定词常量的定义是不可以放在头文件中的。因为这样会造成重复定义的问题（*这与GNU编译原理有关*）。在一个工程中要防止这类小型程序中不会出现但是大型工程会存在的问题。比如文件指针的释放，指针的使用等。在小型程序中不要依赖每一次的调试和运行，要尽可能掌握情况  
 
 在对函数的定义头部加入注释，当需要复习其定义时即可以使用ctrl直接显示定义时的注释  
 
-尽量对工程有一个全局的认识.包括存储在程序外部的数据有哪些，如何管理这些数据，以及这些数据是如何传递的
+尽量对工程有一个全局的认识.包括存储在程序外部的数据有哪些，如何管理这些数据，以及这些数据是如何传递的.这种全局认识既可以使编码者对工程的掌握程度提高，减少修复bug和添加feature所需要的时间，同时也能增加知识水平
