--- a/C note/零散笔记.md
+++ b/C note/零散笔记.md
@@ -6,3 +6,5 @@
 定义一个**字符型指针**用来存储字符串相当于开辟无名字符数组，然后用指针指向其首地址。输入操作会使该指针移向该数组的末尾，可以用str-=strlen(str)-1来将其移向头部  
 
 <b>[]</b> 实际上是变址运算符，即将a[i]按a+i计算地址然后取出对应地址中的值
+
+Printable ASCII: 32~126
