--- a/C note/算法总成/思考笔记/学习与自创.md
+++ b/C note/算法总成/思考笔记/学习与自创.md
@@ -1,2 +1,3 @@
 # 所有轻视学习而重视自创的实践都会失败
-人无法在认知层面上创新的，所以一定要学习。明确创新一事所指的是不断从自然或他人获取新认知和新实践方式（其实也是认知），总之认知是不能够凭空制造的
+人无法在认知层面上创新的，所以一定要学习。明确创新一事所指的是不断从自然或他人获取新认知和新实践方式（其实也是认知），总之认知是不能够凭空制造的.  
+高精度四则运算是一种算法。使用这种算法，还是理解算法的原理，究竟哪一个是我的目的？  
