--- a/C note/零散笔记.md
+++ b/C note/零散笔记.md
@@ -10,3 +10,9 @@
 Printable ASCII: 32~126  
 
 嵌套模板参数列表的相邻">"分隔符之间需要空格  
+
+向字符串类型输入数据会使迭代器失效  
+
+打代码的时候要时刻把握每个部分的功能  
+
+在一个vector或者string还没有接收任何数据时，.begin()迭代器也是不存在的，也就是说一个初始化的STL容器是没有任何数据的。如果有一个迭代器类型的对象存储着.begin()，那么在第一次push_back时，该迭代器就会失效.且push_back会使.end()之前的一个迭代器失效  
