--- a/C note/算法总成/思考笔记/学习与自创.md
+++ b/C note/算法总成/思考笔记/学习与自创.md
@@ -2,3 +2,7 @@
 人无法在认知层面上创新的，所以一定要学习。明确创新一事所指的是不断从自然或他人获取新认知和新实践方式（其实也是认知），总之认知是不能够凭空制造的.  
 高精度四则运算是一种算法。使用这种算法，还是理解算法的原理，究竟哪一个是我的目的？  
 有一些bug出现得很细节，这些问题可以根据新经验去解决而不一定要通过整篇回顾的方式来解决  
+没有任何一本书或者一篇文章能够完整地揭露知识的全貌，因此一定要广泛吸收，摒弃过去受信息渠道限制养成的“只靠一本书”的习惯  
+虽然可能导致浪费时间，但务必将知识熟悉，不要提倡模糊认知  
+算法的本质上和人类过河搭桥的行为一样，本质上都是**方法**的运用。方法的运用取决于*情况*和*功能*之间的相互关系。为了理解情况，积累对功能的认识，需要多解决问题并对方法加以思考   
+对代码的功能要熟悉,不同迭代器当然不能混用，如果发生了混用，说明对目前所写的功能还不具有明确的认识    
