--- a/C note/数组长问题.md
+++ b/C note/数组长问题.md
@@ -1,8 +1,9 @@
-é™æ€æ•°ç»„å­˜å‚¨åœ¨æ ˆä¸­ï¼Œèƒ½åˆ†é…ç»™æ•°ç»„çš„ç©ºé—´æ˜¯æœ‰é™çš„ã€‚å¦‚æžœå®šä¹‰äº†ä¸€ä¸ªè¿‡å¤§çš„æ•°ç»„å¯èƒ½å¯¼è‡´ç¨‹åºå´©æºƒï¼Œä¹Ÿå°±æ˜¯ä¸€å¼€å§‹å°±æ²¡æœ‰åŠžæ³•è¿è¡Œã€‚åœ¨éœ€è¦æ›´å¤§çš„å­˜å‚¨ç©ºé—´æ—¶ä½¿ç”¨å‘é‡æˆ–è€…åŠ¨æ€æ•°ç»„ã€‚åŠ¨æ€æ•°ç»„çš„å®šä¹‰å¦‚ä¸‹
+¾²Ì¬Êý×é´æ´¢ÔÚÕ»ÖÐ£¬ÄÜ·ÖÅä¸øÊý×éµÄ¿Õ¼äÊÇÓÐÏÞµÄ¡£Èç¹û¶¨ÒåÁËÒ»¸ö¹ý´óµÄÊý×é¿ÉÄÜµ¼ÖÂ³ÌÐò±ÀÀ££¬Ò²¾ÍÊÇÒ»¿ªÊ¼¾ÍÃ»ÓÐ°ì·¨ÔËÐÐ¡£ÔÚÐèÒª¸ü´óµÄ´æ´¢¿Õ¼äÊ±Ê¹ÓÃÏòÁ¿»òÕß¶¯Ì¬Êý×é¡£¶¯Ì¬Êý×éµÄ¶¨ÒåÈçÏÂ
 ```cpp
 int *p=new int[100];
 ```
-è¿™æ ·åˆ†é…çš„ç©ºé—´å¯ä»¥æœ‰å¾ˆå¤§çš„ä¸Šé™ã€‚ä½†ç”±äºŽæ˜¯åŠ¨æ€åˆ†é…çš„æ‰€ä»¥åœ¨ç¨‹åºç»“æŸæˆ–è€…ä½¿ç”¨ç»“æŸä¹‹åŽåº”è¯¥è¿›è¡Œåˆ é™¤
+ÕâÑù·ÖÅäµÄ¿Õ¼ä¿ÉÒÔÓÐºÜ´óµÄÉÏÏÞ¡£µ«ÓÉÓÚÊÇ¶¯Ì¬·ÖÅäµÄËùÒÔÔÚ³ÌÐò½áÊø»òÕßÊ¹ÓÃ½áÊøÖ®ºóÓ¦¸Ã½øÐÐÉ¾³ý
 ```cpp
 delete[] p;
 ```
+È»¶ø¼´±ãÈç´Ë£¬Êý×éµÄÊ¹ÓÃÐ§ÂÊÒ²²»ÈçvectorÈÝÆ÷£¬ÒòÎªvectorÖÐ»á¶¯Ì¬µØ½øÐÐÄÚ´æ¹ÜÀí£¬²¢ÇÒ¿ÉÒÔ²»ÓÃÀí»áÆäÄÚ´æÊ¹ÓÃÇé¿ö  
