--- a/Note/总结.md
+++ b/Note/总结.md
@@ -22,3 +22,16 @@
 
 *无感之为不为*  
 以上这句话在做课设的时候体会到了。一个文件指针关闭问题，一个解引用和自增运算符次序问题让我的编程之路有了很多受益
+
+**第二次小组任务**  
+我写栈的ADT速度还不错。应该有一下几个原因：  
+1. 我有重新看过上周写的链表ADT的实现
+2. 周日我已经写过一段时间的队列ADT，相当于复习了一下
+3. 重视了**模仿**，**研究借鉴**，以及重视了学习循环
+
+从目前的进程看来，要想在数据结构和算法中取得一些进步，依靠这个学习循环，是有效果的。也有一种可能，在未来我会需要更加深入的模型来解释如何学习。现阶段的编程还是要**模仿，熟练和反思改进**。不用疑惑动机了也许，因为competence和motivation总是相辅相成的    
+
+*缺点*  
+周六没有写，这让后续工作量急剧上升  
+周日中午花太多时间在数学上面，这也让工作量急剧上升  
+周日晚上个人状态崩盘，没有去写代码  
