--- a/Note/C和C++基本/零散笔记.md
+++ b/Note/C和C++基本/零散笔记.md
@@ -18,3 +18,5 @@ Printable ASCII: 32~126
 在一个vector或者string还没有接收任何数据时，.begin()迭代器也是不存在的，也就是说一个初始化的STL容器是没有任何数据的。如果有一个迭代器类型的对象存储着.begin()，那么在第一次push_back时，该迭代器就会失效.且push_back会使.end()之前的一个迭代器失效  
 
 sort(开头元素，结尾元素的后一个)  
+
+time_t time(time_t *second)函数返回的是自1970年1月1日至今的秒数。second参数的作用是被修改为time的返回值
