--- a/Algorithm/ALnote/对算法的思考.md
+++ b/Algorithm/ALnote/对算法的思考.md
@@ -2,3 +2,13 @@
 我已经不知道要记录些什么了。说明我对这件事情的认知其实很浅。重新开始，不要一直持否定态度，毕竟是真的不了解。  
 还有，一定要慢慢地搞懂每一行代码。  
 不要水，水的后果很严重很严重。  
+C/C++语言基础需要时常复习呢。像是**未初始化变量**就可能导致算法的运行结果出现问题（比如在合并有序数组中就是这样）  
+还有，一个算法的模板也不能保证100%正确  
+在写斐波那契数列的输出的时候，我发现即使我写过4，5遍了，再写仍需20分钟以上的时间。这说明我对之前写的内容是没有记忆的。我意识到，这件事情不是花的时间越多越好，不注重效果反而会越来越dumb。*而效果是可以感受得到的*。我需要效果，而不是单纯的时间积累。  
+
+写程序要写草稿，不要直接开始写，因为这是思路-代码的过程。过去有这个错误。*当然胡思乱想的错误更明显一点*  
+不过如何从代码到思路也是很重要的一环  
+
+很重要的就是参考别人的代码  
+
+比如树的删除ADT，我很想记住这些代码。所以需要将它们使用起来。不能盼望笔记封存所有记忆然后要时再取。  
