--- a/Note/工程通用知识/工程.md
+++ b/Note/工程通用知识/工程.md
@@ -5,4 +5,6 @@
 
 在对函数的定义头部加入注释，当需要复习其定义时即可以使用ctrl直接显示定义时的注释  
 
-尽量对工程有一个全局的认识.包括存储在程序外部的数据有哪些，如何管理这些数据，以及这些数据是如何传递的.这种全局认识既可以使编码者对工程的掌握程度提高，减少修复bug和添加feature所需要的时间，同时也能增加知识水平
+尽量对工程有一个全局的认识.包括存储在程序外部的数据有哪些，如何管理这些数据，以及这些数据是如何传递的.这种全局认识既可以使编码者对工程的掌握程度提高，减少修复bug和添加feature所需要的时间，同时也能增加知识水平  
+
+对一个工程的架构需要有思考，不能将ide打开之后马上就开始写代码。因为架构是将功能分组件实现，其中势必涉及到功能的设计和配合的问题。  
