--- a/Note/总结.md
+++ b/Note/总结.md
@@ -27,3 +27,4 @@
 
 **对学习速度的追求是奇怪而畸形的**  
 最近的感悟是我不愿为了加入某个工作室而努力，但是我所学的内容似乎都是他们希望我会的内容，而他们不希望我会的内容，我自己希望自己会的内容却没有认真地去学了。哲学的角度上看，这也是对自己的不**真实**。  
+其实我自己不需要很夸张的超前学习。那样的超前学习给我学习代码带来不好的习惯，比如在网上搜索到相关代码之后立马就使用，并且不加以思索，因而记忆效力也甚低。  
