--- a/Note/计算机底层/计算机组成原理/主存储器.md
+++ b/Note/计算机底层/计算机组成原理/主存储器.md
@@ -2,4 +2,4 @@
 一般指RAM   
 含有：控制逻辑，地址译码器，存储单元，存储器地址寄存器MAR，存储器数据寄存器MDR  
 内部分为许多存储单元。每一个存储单元是一个字节的大小（8位二进制）。每一个单元都有一个独一无二的地址。  
-通过总线与CPU连接，CPU通过总线从这里存取数据。  
+通过各种总线与CPU连接，CPU通过总线从这里存取数据。  
