--- a/Note/计算机底层/计算机组成原理/系统总线.md
+++ b/Note/计算机底层/计算机组成原理/系统总线.md
@@ -2,8 +2,28 @@
 ## Digest
 系统总线是连接CPU和主存的线路。*也不一定只是连接CPU和主存*。  
 
-## 组成
-控制总线：  
-数据总线：宽度一般为存储单元位宽的整数倍  
-地址总线：地址总线决定CPU能管理的存储单元。使用宽度为n的地址总线，CPU能管理的存储单元为2^n个
+## 在系統中
+总线可以有*以CPU为中心的双总线结构*，*单总线结构*，*以存储器为中心的双总线结构*。现代计算机采用的总线结构并不固定。所以不用拘泥于总线结构范式。  
 
+## Tag
+串行：数据在单条1位宽的传输线上，一位一位地按顺序分时传送  
+并行：数据在多条1位宽的传输线上，同时进行传送
+
+## 分类
+控制总线：依靠这条总线发出控制信号，调节各个部件对总线的使用权。通常，传输是单向的。常用的控制信号有：时钟，复位，中断请求，中断响应...  
+
+数据总线：传输各个部件之间的数据。双向传输。数据总线的位数称为宽度。宽度一般为存储单元位宽的整数倍，也与机器字长有关。CPU与主存之间的数据总线的宽度决定CPU一次能取多少位数据。如果位宽是8，那么一条16位指令就需要取两次。    
+
+地址总线：地址总线传输的是CPU需要的地址位置。*因为地址也是用二进制码表示的，所以可以用地址总线去传输*。传输地址的要求是**表示地址的每一个二进制位必须并行传输**。地址总线决定CPU能管理的存储单元。使用宽度为n的地址总线，CPU能管理的存储单元为2^n个。  
+
+通信总线：计算机与其他计算机或其他系统之间通信。受距离影响而采用不同类型的总线。通常**近距离并行**，**远距离串行**  
+
+为了使总线生产和使用更加高效，建立了总线标准
+
+## PCI总线
+PCI是一类比较先进的总线标准  
+
+特点
+- 不依附于某个具体处理器的局部总线，且于CPU时钟频率无关，因为它自身采用33MHz和66MHz的总线时钟。
+- PCI总线部件和插件接口独立于处理器，兼容不同结构处理器。因此，具有良好的**兼容性**
+。。。
