--- a/Note/C和C++基本/零散笔记.md
+++ b/Note/C和C++基本/零散笔记.md
@@ -21,4 +21,6 @@ sort(开头元素，结尾元素的后一个)
 
 time_t time(time_t *second)函数返回的是自1970年1月1日至今的秒数。second参数的作用是被修改为time的返回值
 
-**重要：C程序读取UTF-8编码的中文字符并进行处理时会出现无法检测的错误，只能读取GBK格式的含中文文件**
+**重要：C程序读取UTF-8编码的中文字符并进行处理时会出现无法检测的错误，只能读取GBK格式的含中文文件**  
+
+函数定义是在库文件中的，对于win32这类库，gcc在编译的时候可能是不会完整地链接其所有库的，因此需要查阅文档并手动链接，用编译参数-l即可  
