--- a/Note/Java/接口实现集合.md
+++ b/Note/Java/接口实现集合.md
@@ -1,18 +1,18 @@
 # Interface, implementation, set
 
 
-## ¼¯ºÏ
-ÒªÏëÓÃ¼¯ºÏ´¦Àí»ù±¾ÀàÐÍ£¬ÐèÓÃ»ù±¾ÀàÐÍµÄ**°ü×°ÀàÐÍ**È¥¹¹Ôì¼¯ºÏ
-|»ù±¾ÀàÐÍ|°ü×°ÀàÃû|
+## é›†åˆ
+è¦æƒ³ç”¨é›†åˆå¤„ç†åŸºæœ¬ç±»åž‹ï¼Œéœ€ç”¨åŸºæœ¬ç±»åž‹çš„**åŒ…è£…ç±»åž‹**åŽ»æž„é€ é›†åˆ
+|åŸºæœ¬ç±»åž‹|åŒ…è£…ç±»å|
 |---|---|
 |byte|Byte|
 |short|Short|
 |long|Long|
-|int|Integer ¡¾ÌØÊâ¡¿|
+|int|Integer ã€ç‰¹æ®Šã€‘|
 |float|Float|
 |double|Double|
-|char|Character ¡¾ÌØÊâ¡¿|
+|char|Character ã€ç‰¹æ®Šã€‘|
 |boolean|Boolean|
-**×°Ïä**£º»ù±¾ÀàÐÍ --> °ü×°ÀàÐÍ  
-**²ðÏä**£º°ü×°ÀàÐÍ --> »ù±¾ÀàÐÍ  
-*Ö§³Ö×Ô¶¯×°ÏäºÍ×Ô¶¯²ðÏä£¬ÔÚµ÷ÓÃ·½·¨µÄÊ±ºò´«ÈëµÄÁ¿¿ÉÒÔÊÇ»ù±¾ÀàÐÍµÄÁ¿£¬¼¯ºÏ¶ÔÏóÊä³öµÄÁ¿Ò²¿ÉÒÔÊÇ»ù±¾ÀàÐÍµÄÁ¿*
+**è£…ç®±**ï¼šåŸºæœ¬ç±»åž‹ --> åŒ…è£…ç±»åž‹  
+**æ‹†ç®±**ï¼šåŒ…è£…ç±»åž‹ --> åŸºæœ¬ç±»åž‹  
+*æ”¯æŒè‡ªåŠ¨è£…ç®±å’Œè‡ªåŠ¨æ‹†ç®±ï¼Œåœ¨è°ƒç”¨æ–¹æ³•çš„æ—¶å€™ä¼ å…¥çš„é‡å¯ä»¥æ˜¯åŸºæœ¬ç±»åž‹çš„é‡ï¼Œé›†åˆå¯¹è±¡è¾“å‡ºçš„é‡ä¹Ÿå¯ä»¥æ˜¯åŸºæœ¬ç±»åž‹çš„é‡*
