--- a/Note/学习陷阱.md
+++ b/Note/学习陷阱.md
@@ -1,4 +1,4 @@
-# Ñ§Ï°µÄ¹ý³ÌÖÐÊÇ´æÔÚÏÝÚåµÄ
-1. ÏÖÔÚÊÇ4ÔÂ12ÈÕ£¬ÑµÁ·Óª×îºóÒ»ÖÜÒÑ¾­¹ýÈ¥ÁË¡£ÎÒ×öµÄÊÂÇéÏà½ÏÓÚ×î¿ªÊ¼ÓÐºÜ´óµÄ±ä»¯¡£ÄÇ¾ÍÊÇÔÚ**Ä£·Â-Êµ¼ù-·´Ë¼**Ñ­»·ÖÐ£¬ÔÚÊµ¼ùÕâÒ»»·»¨·ÑÁËÌ«¶àÊ±¼äÒò¶øÈ±·¦·´Ë¼ºÍÄ£·Â¡£ÕâÖÖ±ä»¯¸øÎÒ´øÀ´µÄ¾ÍÊÇÄÜÁ¦µÄÔ­µØÌ¤²½¡£ÕâÒ²ÊÇÎÒ×î½ü·¢ÏÖµÄ×î´óµÄÏÝÚå  
-2. ËÙ¶È»ÃÏó¡£ÒÔÉÏÕâÖÖ±ä»¯µÄ²úÉú£¬ÎÒÏëÓ¦¸ÃÊÇÒòÎªÕâÖÖ×ö·¨ÔÚ×î¿ªÊ¼¸øÎÒ´øÀ´Ñ§Ï°ËÙ¶ÈºÜ¿ìµÄ»ÃÏó¡£  
-3. ¶Ô¹¦ÄÜµÄ**ÕÆÎÕ¸Ð**Öð½¥ÔÚÂéÄ¾µÄ´úÂë¹¦ÄÜ»ýÀÛÖÐÏûÊ§ÊÇÑ§Ï°³É¾Í¸ÐÏ÷ÈõµÄÖØÒªÒòËØ
+## è®­ç»ƒè¥é˜¶æ®µå‘çŽ°çš„é™·é˜±
+1. **æ¨¡ä»¿-å®žè·µ-åæ€**å¾ªçŽ¯ä¸­å®¹æ˜“èŠ±è´¹è¿‡å¤šæ—¶é—´åœ¨å®žè·µä¸Šï¼Œå¯¼è‡´åŽŸåœ°è¸æ­¥ã€‚è®­ç»ƒè¥é˜¶æ®µæœ€å¤§çš„é™·é˜±  
+2. é€Ÿåº¦å¹»è±¡ã€‚é‡åˆ°é—®é¢˜å°±ç…§æ¬åˆ«äººè§£å†³æ–¹æ³•ï¼Œæœ€ç»ˆä¼šåšå‡ºä¸€ä¸ªé¡¹ç›®ï¼Œç„¶åŽå°±ä¼šäº§ç”Ÿé€Ÿåº¦å¾ˆå¿«çš„å¹»è±¡  
+3. ä¸é‡è§†å¯¹åŠŸèƒ½å¸ƒç½®çš„æŽŒæ¡
