--- a/Note/总结.md
+++ b/Note/总结.md
@@ -30,3 +30,6 @@
 其实我自己不需要很夸张的超前学习。那样的超前学习给我学习代码带来不好的习惯，比如在网上搜索到相关代码之后立马就使用，并且不加以思索，因而记忆效力也甚低。  
 
 算法题目的本质不是完成了即可，是要从中学习到东西的。而很多时候我都是在写完之后把知识抛下，觉得这些知识只是这道题适用。  
+
+## 读码
+读码的目的可能是复习单句功能，读出总体功能，了解功能如何实现，找出实现方法中的bug。带着目的去阅读，不要总是读的时候想着它单句的功能  
