--- a/Algorithm/ALnote/二叉树.md
+++ b/Algorithm/ALnote/二叉树.md
@@ -8,7 +8,7 @@ struct Node {
     struct Node *right;
 };
 ```
-每一个Node类型的变量的value成员代表二叉树的节点数据，所以不一定是int，可以是其他类型的数据。left成员指向左子树的地址，right成员指向右子树的地址。  
+每一个Node类型的变量的data成员代表二叉树的节点数据，所以不一定是int，可以是其他类型的数据。left成员指向左子树的地址，right成员指向右子树的地址。  
 ## 遍历
 有三种遍历二叉树的方法，分别是先序遍历，中序遍历，后序遍历。  
 <del>
